Fix table alignment: fixed pixel widths for ID and ETA columns

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,20 +1,14 @@
-/* Fix table column alignment for to-do list tables */
+/* Consistent table column widths for to-do list tables */
 .md-typeset table:not([class]) {
   width: 100%;
-  table-layout: fixed;
+}
+
+.md-typeset table:not([class]) th:last-child,
+.md-typeset table:not([class]) td:last-child {
+  width: 100px;
 }
 
 .md-typeset table:not([class]) th:first-child,
 .md-typeset table:not([class]) td:first-child {
-  width: 8%;
-}
-
-.md-typeset table:not([class]) th:nth-child(2),
-.md-typeset table:not([class]) td:nth-child(2) {
-  width: 72%;
-}
-
-.md-typeset table:not([class]) th:nth-child(3),
-.md-typeset table:not([class]) td:nth-child(3) {
-  width: 20%;
+  width: 50px;
 }
